<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/coordinatorLayout">



    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/abel"
                android:text="@string/desc_popcorn_chicken"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:contentDescription="@string/ingredients"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRecipeName"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textRecipeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/abel"
                android:text="@string/tree_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="32sp"
                android:contentDescription="@string/ingredientsName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_fruit_salad"
                app:layout_constraintVertical_bias="0.022" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_fruit_salad"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:elevation="2dp"
                android:src="@drawable/hemlock_tree"
                android:contentDescription="@string/ingredientsPic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleShape" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/background_fruit_salad2"
                android:layout_width="333dp"
                android:layout_height="333dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="@string/ingredientsPic"
                app:layout_constraintBottom_toBottomOf="@+id/image_fruit_salad"
                app:layout_constraintEnd_toEndOf="@+id/image_fruit_salad"
                app:layout_constraintStart_toStartOf="@+id/image_fruit_salad"
                app:layout_constraintTop_toTopOf="@+id/image_fruit_salad"
                app:shapeAppearanceOverlay="@style/circleShape"
                app:srcCompat="@color/light_gray" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>